<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/hm">



    <EditText
        android:id="@+id/edituser"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:textColor="@color/hitam"
        android:textSize="15sp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="230dp"
        android:layout_gravity="center"

        android:hint="@string/email"
        android:textColor="@color/hitam"
        android:textSize="15sp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"

        />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="230dp"
        android:layout_gravity="center"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/hitam"
        android:textSize="15sp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"

        />

    <EditText
        android:id="@+id/editkonfpass"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:hint="@string/konfirmasi"
        android:inputType="textPassword"
        android:textColor="@color/hitam"
        android:textSize="15sp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"

        />

    <Button
        android:id="@+id/buttonregister"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:background="@drawable/barunih"
        android:textStyle="bold"
        android:fontFamily="@font/leter"
        android:textColor="@color/putih"
        android:text="@string/submit"
        />


</LinearLayout>
