<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/nisasabyun">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">
        <Button

            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back"
            android:background="@drawable/bek">

        </Button>



    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_height="250dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lhtKategori"
            android:layout_marginBottom="10dp"
            android:text="Food"
            android:fontFamily="@font/leter"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/hitam"
            android:gravity="center"/>
        <TextView
            android:layout_width="90dp"

            android:layout_height="wrap_content"
            android:layout_below="@id/lhtKategori"
            android:textSize="22sp"
            android:fontFamily="@font/leter"
            android:id="@+id/txtcat"
            android:text="@string/kategori"
            android:layout_marginBottom="10dp"/>
            <TextView
                android:textColor="@color/hitam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/leter"
                android:id="@+id/cat"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/txtcat"
                android:layout_below="@id/lhtKategori"
                android:text="Expenses"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cat"
                android:textSize="22sp"
                android:fontFamily="@font/leter"
                android:id="@+id/txtmoney"
                android:text="@string/jumlah"/>
            <TextView
                android:textColor="@color/hitam"
                android:id="@+id/mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/leter"
                android:layout_toRightOf="@id/txtmoney"
                android:layout_below="@id/cat"
                android:text="90000"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtmoney"
                android:textSize="22sp"
                android:fontFamily="@font/leter"
                android:id="@+id/txdate"
                android:text="@string/date"/>
            <TextView
                android:textColor="@color/hitam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/leter"
                android:id="@+id/date"
                android:layout_toRightOf="@id/txtmoney"
                android:layout_below="@id/txtmoney"
                android:text="2018-19-9"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txdate"
                android:textSize="22sp"
                android:fontFamily="@font/leter"
                android:id="@+id/txnote"
                android:text="@string/note"/>
            <TextView
                android:textColor="@color/hitam"
                android:id="@+id/not"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/leter"
                android:layout_toRightOf="@id/txtmoney"
                android:layout_below="@id/txdate"
                android:text="semangat"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/not"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/delete"
                android:onClick="delete"/>

            <Button
                android:id="@+id/update"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/not"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/delete"
                android:background="@drawable/update" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>